include/NovelRT.Interop/Graphics/NrtRenderingService.h

    NrtResult Nrt_RenderingService_create(NrtWindowingServiceHandle windowingService,
                                          NrtRenderingServiceHandle* outputRenderingService);
    NrtResult Nrt_RenderingService_initialiseRendering(
        NrtRenderingServiceHandle renderingService); // this function has its own return codes, so in theory we can
                                                     // combine them both into the main return code
    NrtResult Nrt_RenderingService_tearDown(NrtRenderingServiceHandle renderingService);
    NrtResult Nrt_RenderingService_createImageRectWithFile(NrtRenderingServiceHandle renderingService,
                                                           NrtImageRectHandle* outputImageRect,
                                                           NrtTransform transform,
                                                           int32_t layer,
                                                           const char* filePath,
                                                           NrtRGBAColourHandle colourTint);
    NrtResult Nrt_RenderingService_createImageRectWithNothing(NrtRenderingServiceHandle renderingService,
                                                              NrtImageRectHandle* outputImageRect,
                                                              NrtTransform transform,
                                                              int32_t layer,
                                                              NrtRGBAColourHandle colourTint);
    NrtResult Nrt_RenderingService_createBasicFillRect(NrtRenderingServiceHandle renderingService,
                                                       NrtBasicFillRectHandle* outputBasicFillRect,
                                                       NrtTransform transform,
                                                       int32_t layer,
                                                       NrtRGBAColourHandle colourConfig);
    NrtResult Nrt_RenderingService_createTextRect(NrtRenderingServiceHandle renderingService,
                                                  NrtTextRectHandle* outputTextRect,
                                                  NrtTransform transform,
                                                  int32_t layer,
                                                  NrtRGBAColourHandle colourConfig,
                                                  float fontSize,
                                                  const char* fontFilePath);
    NrtResult Nrt_RenderingService_getCamera(NrtRenderingServiceHandle renderingService, NrtCameraHandle* outputCamera);
    NrtResult Nrt_RenderingService_beginFrame(NrtRenderingServiceHandle renderingService);
    NrtResult Nrt_RenderingService_endFrame(NrtRenderingServiceHandle renderingService);
    NrtResult Nrt_RenderingService_setBackgroundColour(NrtRenderingServiceHandle renderingService,
                                                       NrtRGBAColourHandle colour);
    NrtResult Nrt_RenderingService_getTextureWithNothing(NrtRenderingServiceHandle renderingService,
                                                         NrtTextureHandle* outputTexture);
    NrtResult Nrt_RenderingService_getTextureWithFile(NrtRenderingServiceHandle renderingService,
                                                      NrtTextureHandle* outputTexture,
                                                      const char* fileTarget);
    NrtResult Nrt_RenderingService_getFontSet(NrtRenderingServiceHandle renderingService,
                                              NrtFontSetHandle* outputFontSet,
                                              const char* fileTarget,
                                              float fontSize);
    NrtResult Nrt_RenderingService_destroy(NrtRenderingServiceHandle renderingService);