include/NovelRT.Interop/Graphics/NrtRGBAConfig.h

  typedef struct RGBAConfigHandle* NrtRGBAConfig;
  NrtRGBAConfig Nrt_RGBAConfig_Create(int32_t r, int32_t g, int32_t b, int32_t a);
  int32_t Nrt_RGBAConfig_getR(NrtRGBAConfig colourConfig, int32_t* outputValue);
  int32_t Nrt_RGBAConfig_setR(NrtRGBAConfig colourConfig, int32_t inputValue);
  int32_t Nrt_RGBAConfig_getG(NrtRGBAConfig colourConfig, int32_t* outputValue);
  int32_t Nrt_RGBAConfig_setG(NrtRGBAConfig colourConfig, int32_t inputValue);
  int32_t Nrt_RGBAConfig_getB(NrtRGBAConfig colourConfig, int32_t* outputValue);
  int32_t Nrt_RGBAConfig_setB(NrtRGBAConfig colourConfig, int32_t inputValue);
  int32_t Nrt_RGBAConfig_getA(NrtRGBAConfig colourConfig, int32_t* outputValue);
  int32_t Nrt_RGBAConfig_setA(NrtRGBAConfig colourConfig, int32_t inputValue);
  int32_t Nrt_RGBAConfig_getRScalar(NrtRGBAConfig colourConfig, float* outputValue);
  int32_t Nrt_RGBAConfig_getGScalar(NrtRGBAConfig colourConfig, float* outputValue);
  int32_t Nrt_RGBAConfig_getBScalar(NrtRGBAConfig colourConfig, float* outputValue);
  int32_t Nrt_RGBAConfig_getAScalar(NrtRGBAConfig colourConfig, float* outputValue);
  int32_t Nrt_RGBAConfig_destroy(NrtRGBAConfig);